--- a/index.html
+++ b/index.html
@@ -1,4 +1,56 @@
 <!DOCTYPE html>
-<head>
-    
-</head>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Virtual Credit Card Design - Jesslyn XTKJ 23</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+        <div class="container">
+            <div class="card">
+                <div class="card-inner">
+                    <div class="front">
+                        <img src="card_img/images/map.png" class="map-img">
+                        <div class="row">
+                            <img src="card_img/images/chip.png" width="60px">
+                            <img src="card_img/images/visa.png" width="80px">
+                        </div>
+                        <div class="row card-no">
+                            <p>5244</p>
+                            <p>2150</p>
+                            <p>8252</p>
+                            <p>6420</p>
+                        </div>
+                        <div class="row card-holder">
+                            <p>CARD HOLDER</p>
+                            <p>VALID TITLE</p>                            
+                        </div>
+                        <div class="row name">
+                            <p>JESSLYN</p>
+                            <p>03/25</p>
+                        </div>
+                    </div>
+                    <div class="back">
+                        <img src="card_img/images/map.png" class="map-img">
+                        <div class="bar"></div>
+                        <div class="row card-cvv">
+                            <div>
+                                <img src="card_img/images/pattern.png">
+                            </div>
+                            <p>824</p>
+                        </div>
+                        <div class="row card-text">
+                            <p>This is a virtual card design built using HTML and CSS, You an also design like this</p>
+                        </div>
+                        <div class="row signature">
+                            <p>CUSTOMER SIGNATURE</p>
+                            <img src="card_img/images/visa.png" width="80px">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </body>
+</html>
