--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <p>824</p>
                         </div>
                         <div class="row card-text">
-                            <p>This is a virtual card design built using HTML and CSS, You an also design like this</p>
+                            <p>HOREEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE~(>_<。)＼</p>
                         </div>
                         <div class="row signature">
                             <p>CUSTOMER SIGNATURE</p>
