--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </div>
                         <div class="row card-holder">
                             <p>CARD HOLDER</p>
-                            <p>VALID TITLE</p>                            
+                            <p>VALID UNTIL</p>                            
                         </div>
                         <div class="row name">
                             <p>JESSLYN</p>
@@ -41,7 +41,7 @@
                             <p>824</p>
                         </div>
                         <div class="row card-text">
-                            <p>HOREEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE~(>_<。)＼</p>
+                            <p>HOREEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE~(>_<。)＼</p>
                         </div>
                         <div class="row signature">
                             <p>CUSTOMER SIGNATURE</p>
