--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Virtual Credit Card Design - Jesslyn XTKJ 23</title>
+        <title>Virtual Credit Card Design - Jesslyn XTKJ1 23</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
